tests/fixtures/invalid/list_bitor_set.py
# Cannot bitwise OR List[int] and Set[int]
x: list[int] = [1, 2, 3] | {1, 2, 3}
